cmake_minimum_required(VERSION 3.26)
project(BJ)

set(CMAKE_CXX_STANDARD 17)

add_executable(BJ main.cpp
        class1/10807.cpp
        class1/5597.cpp
        class1/2738.cpp
        class1/11654.cpp
        class1/2743.cpp
        class1/2744.cpp
        class1/2754.cpp
        class1/27866.cpp
        class1/11718.cpp
        class1/9086.cpp
        class1/15964.cpp
        class1/2475.cpp
        class1/2562.cpp
        class1/2675.cpp
        class1/10818.cpp
        class1/11720.cpp
        class1/1152.cpp
        class1/1157.cpp
        class1/2439.cpp
        class1/10250.cpp
        class1/2577.cpp
        class1/2884.cpp
        class1/2920.cpp
        class1/3052.cpp
        class1/8958.cpp
        class1/10809.cpp)
